More textual overlap fixes

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -61,7 +61,7 @@
 }
 
 // Mobile screen specific stylings
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
   #gameTitle {
     margin-right: 160px;
   }
@@ -69,8 +69,12 @@
   .mobileBattleTitle {
     height: 29%;
 
-    .left, .right {
-      margin-top: 52px;
+    .left {
+      margin-top: 55px;
+    }
+
+    .right {
+      margin-top: 53px;
     }
   }
 
@@ -441,16 +445,20 @@ img {
   .timer {
     position: absolute;
     width: 100%;
-    height: 20px;
-    top: 36px;
+    height: 18px;
+    top: 38px;
   }
 
   .pokeball-animated {
     margin-top: 25px;
 
-    @media (max-width: 768px) {
+    @media (max-width: 1200px) {
       margin-top: 10px;
     }
+  }
+
+  .dungeon .pokeball-animated {
+    margin-top: 10px;
   }
 
   .catchChance {
